// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SQLRepository getAll should return user list 1`] = `
Array [
  Object {
    "_id": "User|valid-user-2@manuscriptsapp.com",
    "connectUserID": undefined,
    "email": "valid-user-2@manuscriptsapp.com",
    "name": "Valid System User",
  },
]
`;

exports[`SQLRepository getOne should return user 1`] = `
Object {
  "_id": "User|valid-user-2@manuscriptsapp.com",
  "connectUserID": undefined,
  "email": "valid-user-2@manuscriptsapp.com",
  "name": "Valid System User",
}
`;
